fixed mobile card alignment

--- a/src/style.css
+++ b/src/style.css
@@ -276,6 +276,9 @@ article {
     .card-wrap {
         flex-direction: row;
     }
+    .legible-card {
+        flex: 1 1 0px;
+    }
 }
 
 @media (min-width: 45rem) and (prefers-reduced-motion: no-preference) {
@@ -318,7 +321,6 @@ article {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 25% 20%;
-    width: 100%;
 }
 
 .legible-card h2 {
